# myboards

./: .coverage  .gitignore  db.sqlite3  manage.py  pyproject.toml
boards_app/: apps.py  models.py  serializers.py  urls.py  views.py
boards_app/migrations/: 0001_initial.py  0002_auto_20200321_1839.py
boards_app/static/assets/css/: material-kit.css  material-kit.css.map  material-kit.min.css
boards_app/static/assets/scss/material-kit/variables/: _carousel.scss
boards_app/templates/account/: base.html
boards_app/templates/base/: index.html
frontend/: package-lock.json  package.json
myboards/: asgi.py  settings.py  urls.py  wsgi.py
templates/account/: login.html  password_reset.html  signup.html
templates/base/: base.html  index.html
