[tool.poetry]
name = "boards_project"
version = "0.1.0"
description = ""
authors = ["Sahil Kumar"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
django-allauth = "^0.41.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.4"
netifaces = "^0.10.9"
whitenoise = "^5.0.1"
djangorestframework = "^3.11.0"
coverage = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
